examples/java/grader_output.txt
Grading oatmealstanislav
Running 'Testoutput'
Failed to compile:
.../oatmealstanislav_12345_12345_Homework.java/TestOutput.java:48: error: cannot find symbol
        System.out.printf("\n%f$%s", result, VALIDATING_STRING);
                                     ^
  symbol:   variable result
  location: class TestOutput
1 error
Running 'Testresult'
Failed to compile:
.../oatmealstanislav_12345_12345_Homework.java/TestResult.java:48: error: cannot find symbol
        System.out.printf("\n%f$%s", result, VALIDATING_STRING);
                                     ^
  symbol:   variable result
  location: class TestResult
1 error
Result: 0/100


Average score: 0/100


Key:
	Failed to Compile: Your submission did not compile due to a syntax or naming error
	Compiled with warnings: Your submission uses unchecked or unsafe operations
	Crashed due to signal SIGNAL_CODE: Your submission threw an uncaught exception.
	All signal error codes are described here: http://man7.org/linux/man-pages/man7/signal.7.html
	Exceeded Time Limit: Your submission took too much time to run (probably an infinite loop)

